@@ -5,7 +5,11 @@ BUGS:
 
 version 0.7.9 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
   - BUG (build): add solaris support. This OS does not have stdint.h.
-  - BUG (build): python 2.5, 64bit machine Py_ssize_t type
+  - BUG (build): add support for python 2.5 on 64 bit machines (new Py_ssize_t type for python2.5)
+  - NEW: add SaveSolarFrqFile in simuUtil.py
+  - NEW: separate SaveQTDT in SaveMerlinDatFile, SaveMerlinMapFile and SaveMerlinPedFile
+		SaveQTDT now calls these three functions.
+
 
 version 0.7.8 - (Rev 833( Mar 2, 2007)
   - BUG: fix broken user interactive input
